// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements/Button Default 1`] = `
<button
  className="sc-jSMfEi dOuCDW"
>
  Default Button
</button>
`;

exports[`Storyshots Elements/Button Primary 1`] = `
<button
  className="sc-jSMfEi sc-gKXOVf dOuCDW buJKwy"
>
  Primary Button
</button>
`;

exports[`Storyshots Elements/Modal Demo 1`] = `
<button
  onClick={[Function]}
>
  Open Modal
</button>
`;

exports[`Storyshots Elements/Pagination Demo 1`] = `
<div
  className="sc-iBkjds hYRAJe"
>
  <nav
    className="sc-ftvSup"
  >
    <ul
      className="sc-papXJ jytsWU"
    >
      <button
        className="sc-kDDrLX cRghX"
        onClick={[Function]}
      >
        <span
          className="sc-gsnTZi fhleMa"
        >
          <svg
            aria-hidden="true"
            className="StyledIconBase-sc-ea9ulj-0 jChdGK"
            fill="currentColor"
            focusable="false"
            height="2.2rem"
            viewBox="0 0 16 16"
            width="2.2rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
      <li
        className="sc-jqUVSM ldosxI"
      >
        <button
          className="sc-kDDrLX eVfBYd"
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li
        className="sc-jqUVSM ldosxI"
      >
        <button
          className="sc-kDDrLX cRghX"
          onClick={[Function]}
        >
          2
        </button>
      </li>
      <li
        className="sc-jqUVSM ldosxI"
      >
        <button
          className="sc-kDDrLX cRghX"
          onClick={[Function]}
        >
          3
        </button>
      </li>
      <li
        className="sc-jqUVSM ldosxI"
      >
        <button
          className="sc-kDDrLX cRghX"
          onClick={[Function]}
        >
          4
        </button>
      </li>
      <li
        className="sc-jqUVSM ldosxI"
      >
        <button
          className="sc-kDDrLX cRghX"
          onClick={[Function]}
        >
          5
        </button>
      </li>
      <li
        className="sc-jqUVSM ldosxI"
      >
        <button
          className="sc-kDDrLX cRghX"
        >
          ...
        </button>
      </li>
      <li
        className="sc-jqUVSM ldosxI"
      >
        <button
          className="sc-kDDrLX cRghX"
          onClick={[Function]}
        >
          10
        </button>
      </li>
      <button
        className="sc-kDDrLX cRghX"
        onClick={[Function]}
      >
        <span
          className="sc-gsnTZi fhleMa"
        >
          <svg
            aria-hidden="true"
            className="StyledIconBase-sc-ea9ulj-0 jChdGK"
            fill="currentColor"
            focusable="false"
            height="2.2rem"
            viewBox="0 0 16 16"
            width="2.2rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots Elements/SelectableTable Demo 1`] = `
<table
  className="sc-crXcEl cQpGUS"
  width=""
>
  <thead
    className="sc-hAZoDl jddhlc"
  >
    <tr
      className="sc-evZas dJHpvT"
    >
      <th
        className="sc-breuTD keGuGx"
      >
        <input
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
      </th>
      <th
        className="sc-breuTD cbAeNW"
      >
        <div>
          First Name
        </div>
        <div
          className="sc-iqcoie gXGAly"
          height="auto"
          onMouseDown={[Function]}
        />
      </th>
      <th
        className="sc-breuTD cbAeNW"
      >
        <div>
          Last Name
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    className="sc-fnykZs inGUAb"
  >
    <tr
      className="sc-evZas dJHpvT"
    >
      <td
        className="sc-ksZaOG icbtYr"
        width="50px"
      >
        <input
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
      </td>
      <td
        className="sc-ksZaOG itLPTo"
        onClick={[Function]}
      >
        John
      </td>
      <td
        className="sc-ksZaOG itLPTo"
        onClick={[Function]}
      >
        Lennon
      </td>
    </tr>
    <tr
      className="sc-evZas dJHpvT"
    >
      <td
        className="sc-ksZaOG icbtYr"
        width="50px"
      >
        <input
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
      </td>
      <td
        className="sc-ksZaOG itLPTo"
        onClick={[Function]}
      >
        Sean
      </td>
      <td
        className="sc-ksZaOG itLPTo"
        onClick={[Function]}
      >
        Lennon
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Form/InputField Default 1`] = `
<input
  className="sc-bczRLJ fAQBvE"
  placeholder="Type here"
/>
`;

exports[`Storyshots Form/InputField Error 1`] = `
<input
  className="sc-bczRLJ fAQBvE is-invalid"
  placeholder="Type here"
/>
`;

exports[`Storyshots Form/SelectField Default 1`] = `
<div
  className="sc-fEOsli kdcOeH"
  width="30rem"
>
  <div
    className="sc-bBrHrO cZnFnQ"
    onClick={[Function]}
  >
    <div
      className="sc-dmRaPn clntmn"
    />
  </div>
</div>
`;

exports[`Storyshots Form/SelectField Error 1`] = `
<div
  className="sc-fEOsli kdcOeH is-invalid"
  width="30rem"
>
  <div
    className="sc-bBrHrO cZnFnQ"
    onClick={[Function]}
  >
    <div
      className="sc-dmRaPn clntmn"
    />
    <div
      className="sc-hHLeRK kmyAWG"
      onClick={[Function]}
    >
      <span
        className="sc-gsnTZi fhleMa"
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-sc-ea9ulj-0 jChdGK"
          fill="currentColor"
          focusable="false"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            data-name="Layer 2"
          >
            <path
              d="m13.41 12 4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
              data-name="close"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form/SelectField Multiple Select 1`] = `
<div
  className="sc-fEOsli kdcOeH"
  width="30rem"
>
  <div
    className="sc-bBrHrO cZnFnQ"
    onClick={[Function]}
  >
    <div
      className="sc-dmRaPn clntmn"
    />
    <div
      className="sc-hHLeRK kmyAWG"
      onClick={[Function]}
    >
      <span
        className="sc-gsnTZi fhleMa"
      >
        <svg
          aria-hidden="true"
          className="StyledIconBase-sc-ea9ulj-0 jChdGK"
          fill="currentColor"
          focusable="false"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            data-name="Layer 2"
          >
            <path
              d="m13.41 12 4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
              data-name="close"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;
